--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 
 # dependencies
 /node_modules
+/client/node_modules
+/server/node_modules
+/client/package-lock.json
+/server/package-lock.json
+/package-lock.json
+
 /.pnp
 .pnp.js
 
